# Notes

./: .gitignore  COMMANDS.md  Cargo.toml  LICENSE  index.html  index_.html  package.json
notes-api/: Cargo.toml
notes-api/src/: data.rs  header.rs  io.rs  lib.rs  map.rs  types.rs
src/: constants.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  lib-tauri.rs  lib.rs  main.rs  projects.rs
