[package]
name = "notes"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
notes-api = { path = "../notes-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
